--- a/docstrings/numerical_simulation/estimation_setup/observation.yaml
+++ b/docstrings/numerical_simulation/estimation_setup/observation.yaml
@@ -149,7 +149,7 @@ classes:
     short_summary: "Class for defining the settings of one-way Doppler observation models."
     extended_summary: |
       :class:`~tudatpy.numerical_simulation.estimation_setup.observation.ObservationSettings` derived class for one-way Doppler observation model settings.
-      Settings object can account for additional observation model aspects such as light time corrections and proper time rate sattings.
+      Settings object can account for additional observation model aspects such as light time corrections and proper time rate settings.
       Instances of this class can be created via the :func:`~tudatpy.numerical_simulation.estimation_setup.observation.one_way_open_loop_doppler` factory function.
 
     # attributes: none exposed
@@ -195,9 +195,9 @@ classes:
 
 
   - name: ObservationSimulationSettings
-    short_summary: "Base struct for defining observation simulation settings."
+    short_summary: "Base structure for defining observation simulation settings."
     extended_summary: |
-      Functional (base) struct for settings of observation simulation.
+      Functional (base) structure for settings of observation simulation.
       A simulation settings object defines observation times, noise and viability criteria for the :class:`~tudatpy.numerical_simulation.estimation.ObservationSimulator` object to which it is applied during the simulation of observations.
       Therefore, one simulation settings object can only refer to one combination of observable type and link geometry (LinkEnds).
       Typically, the user does not interact with this class directly, but defines specific observation simulation settings using an object derived from this class.
@@ -212,14 +212,14 @@ classes:
 
 
   - name: TabulatedObservationSimulationSettings
-    short_summary: "Struct for setting a list of observation times."
+    short_summary: "Structure for setting a list of observation times."
     extended_summary: |
-      :class:`~tudatpy.numerical_simulation.estimation_setup.observation.ObservationSimulationSettings` derived struct for settings of observation simulation.
+      :class:`~tudatpy.numerical_simulation.estimation_setup.observation.ObservationSimulationSettings` derived structure for settings of observation simulation.
       A simulation settings object defines observation times, noise and viability criteria for the :class:`~tudatpy.numerical_simulation.estimation.ObservationSimulator` object to which it is applied during the simulation of observations.
       Therefore, one simulation settings object can only refer to one combination of observable type and link geometry (LinkEnds).
 
-      In this struct, discrete time instances at which applicable observations are to be simulated are defined and stored in a rigid, "tabulated" form. Some observation times may be discarded due to the use of vaibility settings.
-      Instances of this class can be created via the :func:`~tudatpy.numerical_simulation.estimation_setup.observation.tabulated_simulation_settings` and :func:`~tudatpy.numerical_simulation.estimation_setup.observation.crearte_tabulated_simulation_settings` factory functions. # [py]
+      In this structure, discrete time instances at which applicable observations are to be simulated are defined and stored in a rigid, "tabulated" form. Some observation times may be discarded due to the use of viability settings.
+      Instances of this class can be created via the :func:`~tudatpy.numerical_simulation.estimation_setup.observation.tabulated_simulation_settings` and :func:`~tudatpy.numerical_simulation.estimation_setup.observation.create_tabulated_simulation_settings` factory functions. # [py]
 
     # attributes: none exposed
 
@@ -290,7 +290,7 @@ functions:
       - name: transmitter # [py]
         type: Tuple[str, str] # [py]
         description: |
-          `LinkEndId` type (tuple of strings), where the first entrance identifies the body and the second entry the reference point of the single tranmitter link end.
+          `LinkEndId` type (tuple of strings), where the first entrance identifies the body and the second entry the reference point of the single transmitter link end.
 
       - name: receivers # [py]
         type: List[ Tuple[str, str] ] # [py]
@@ -316,7 +316,7 @@ functions:
       - name: transmitters # [py]
         type: List[ Tuple[str, str] ] # [py]
         description: |
-          List of `LinkEndId` types (tuple of strings), where for each tuple the first entrance identifies the body and the second entry the reference point of the tranmitter link end(s).
+          List of `LinkEndId` types (tuple of strings), where for each tuple the first entrance identifies the body and the second entry the reference point of the transmitter link end(s).
 
       - name: receiver # [py]
         type: Tuple[str, str] # [py]
@@ -599,7 +599,7 @@ functions:
       - name: bias_settings # [py]
         type: :class:`ObservationBiasSettings`, default = None # [py]
         description: |
-          Settings for the observation bias that is to be used for the observation, default is none (unbiases observation).
+          Settings for the observation bias that is to be used for the observation, default is none (unbiased observation).
           Note that only one bias setting is applied to the n-way observable.
 
       - name: retransmission_times_function # [py]
@@ -647,7 +647,7 @@ functions:
       - name: bias_settings # [py]
         type: :class:`ObservationBiasSettings`, default = None # [py]
         description: |
-          Settings for the observation bias that is to be used for the observation, default is none (unbiases observation)
+          Settings for the observation bias that is to be used for the observation, default is none (unbiased observation)
 
       - name: transmitter_proper_time_rate_settings # [py]
         type: :class:`DopplerProperTimeRateSettings`, default = None # [py]
@@ -693,7 +693,7 @@ functions:
       - name: bias_settings # [py]
         type: :class:`ObservationBiasSettings`, default = None # [py]
         description: |
-          Settings for the observation bias that is to be used for the full observation, default is none (unbiases observation). Note that,
+          Settings for the observation bias that is to be used for the full observation, default is none (unbiased observation). Note that,
           even if no bias is applied to the two-way observable, the constituent one-way observables may still be biased.
 
     returns:
@@ -731,7 +731,7 @@ functions:
       - name: bias_settings # [py]
         type: :class:`ObservationBiasSettings`, default = None # [py]
         description: |
-          Settings for the observation bias that is to be used for the observation, default is none (unbiases observation)
+          Settings for the observation bias that is to be used for the observation, default is none (unbiased observation)
 
     returns:
         type: :class:`ObservationSettings`  # [py]
@@ -768,7 +768,7 @@ functions:
       - name: bias_settings # [py]
         type: :class:`ObservationBiasSettings`, default = None # [py]
         description: |
-          Settings for the observation bias that is to be used for the observation, default is none (unbiases observation)
+          Settings for the observation bias that is to be used for the observation, default is none (unbiased observation)
 
     returns:
       type: :class:`OneWayDifferencedRangeRateObservationSettings`  # [py]
@@ -800,7 +800,7 @@ functions:
       - name: bias_settings # [py]
         type: :class:`ObservationBiasSettings`, default = None # [py]
         description: |
-          Settings for the observation bias that is to be used for the observation, default is none (unbiases observation)
+          Settings for the observation bias that is to be used for the observation, default is none (unbiased observation)
 
     returns:
         type: :class:`ObservationSettings`  # [py]
@@ -827,7 +827,7 @@ functions:
       - name: bias_settings # [py]
         type: :class:`ObservationBiasSettings`, default = None # [py]
         description: |
-          Settings for the observation bias that is to be used for the observation, default is none (unbiases observation)	
+          Settings for the observation bias that is to be used for the observation, default is none (unbiased observation)	
 
     returns:
         type: :class:`ObservationSettings`  # [py]
@@ -854,7 +854,7 @@ functions:
       - name: bias_settings # [py]
         type: :class:`ObservationBiasSettings`, default = None # [py]
         description: |
-          Settings for the observation bias that is to be used for the observation, default is none (unbiases observation)	
+          Settings for the observation bias that is to be used for the observation, default is none (unbiased observation)	
 
     returns:
         type: :class:`ObservationSettings`  # [py]
@@ -867,7 +867,7 @@ functions:
     short_summary: "Factory function for creating settings for observable containing the body orientation as Euler angles."
     extended_summary: |
       Factory function for creating observation model settings of Euler angle type observables.
-      This observable can be used for *e.g.* body attitude observattions, but can also be very useful as 'synthetic' observable for verification or analysis purposes.
+      This observable can be used for *e.g.* body attitude observations, but can also be very useful as 'synthetic' observable for verification or analysis purposes.
       This observable provides the rotation from inertial (defined by the global frame orientation) to body-fixed orientation of the 
       body specified by the `observed_body` in the `link_ends` input.  The observable
       has size 3, and contains the  3-1-3 (e.g. z-x-z) Euler angles
@@ -882,7 +882,7 @@ functions:
       - name: bias_settings # [py]
         type: :class:`ObservationBiasSettings`, default = None # [py]
         description: |
-          Settings for the observation bias that is to be used for the observation, default is none (unbiases observation)	
+          Settings for the observation bias that is to be used for the observation, default is none (unbiased observation)	
 
     returns:
         type: :class:`ObservationSettings`  # [py]
@@ -897,7 +897,7 @@ functions:
     short_summary: "Factory function for defining single elevation angle viability setting."
     extended_summary: |
       Factory function for defining elevation angle viability settings for single link end.
-      When simulating observations, this setting ensures that any applicable observations, for which the local elevation angle at link end is less than some limit value, will be ommited.
+      When simulating observations, this setting ensures that any applicable observations, for which the local elevation angle at link end is less than some limit value, will be omitted.
 
     parameters:
 
@@ -924,7 +924,7 @@ functions:
     extended_summary: |
       Factory function for defining elevation angle viability settings for multiple link ends.
       Each entry in the returned list contains the observation viability settings for one link end.
-      When simulating observations, these settings ensure that any applicable observations, for which the local elevation angle at a link end is less than some limit value, will be ommited.
+      When simulating observations, these settings ensure that any applicable observations, for which the local elevation angle at a link end is less than some limit value, will be omitted.
 
     parameters:
 
@@ -933,7 +933,7 @@ functions:
         description: |
           List of individual link ends (as defined by body/reference point pair, see TODO), for which the elevation angle viability setting is to be created.
           To apply these settings to *all* ground station on a given body (such as "Earth"), use ["Earth", ""].
-          For each link end included in this list, it will be checked if a signal received by and/or transmited (or reflected) by this
+          For each link end included in this list, it will be checked if a signal received by and/or transmitted (or reflected) by this
           link end violates the minimum elevation angle constraint.
 
       - name: elevation_angle # [py]
@@ -953,7 +953,7 @@ functions:
     short_summary: "Factory function for defining body avoidance observation viability settings."
     extended_summary: |
       Factory function for defining body avoidance observation viability settings for single link ends.
-      When simulating observations, this settings ensures that any applicable observations, for which the signal path passes 'too close' to a body, will be ommited.
+      When simulating observations, this settings ensures that any applicable observations, for which the signal path passes 'too close' to a body, will be omitted.
       The definition of 'too close' is computed as the angle between:
       
       * The line-of-sight vector from a link end to a given third body
@@ -969,7 +969,7 @@ functions:
         description: |
           Link end (as defined by body/reference point pair, see TODO), for which the viability settings are to be created.
           To apply these settings to *all* ground station on a given body (such as "Earth"), use ["Earth", ""] is entry in this list.
-          For each link end included in this list, it will be checked if a signal received by and/or transmited (or reflected) by this
+          For each link end included in this list, it will be checked if a signal received by and/or transmitted (or reflected) by this
           link end passes too close to the specified body.
 
       - name: body_to_avoid # [py]
@@ -994,7 +994,7 @@ functions:
     extended_summary: |
       Factory function for defining body avoidance viability settings for multiple link ends.
       Each entry in the returned list contains the observation viability settings for one link end.
-      When simulating observations, these settings ensure that any applicable observations, for which the signal path passes 'too close' to a body, will be ommited.
+      When simulating observations, these settings ensure that any applicable observations, for which the signal path passes 'too close' to a body, will be omitted.
       The definition of 'too close' is computed as the angle between:
 
       * The line-of-sight vector from a link end to a given third body
@@ -1030,7 +1030,7 @@ functions:
   #######################################################################
 
   - name: body_occultation_viability # [py]
-    short_summary: "Factory function for defining body occulation viability settings."
+    short_summary: "Factory function for defining body occultation viability settings."
     extended_summary: |
       Factory function for defining body occultation viability settings for single link ends.
       When simulating observations, this setting ensures that any applicable observations, for which the signal path is occulted by a given body, will be omitted.
@@ -1056,7 +1056,7 @@ functions:
   #######################################################################
 
   - name: body_occultation_viability_list # [py]
-    short_summary: "Factory function for defining body occulation viability settings."
+    short_summary: "Factory function for defining body occultation viability settings."
     extended_summary: |
       Factory function for defining body occultation viability settings for multiple link ends.
       Each entry in the returned list contains the observation viability settings for one link end.
@@ -1070,7 +1070,7 @@ functions:
         description: |
           List of individual link ends (as defined by body/reference point pair, see TODO), for which the viability settings are to be created.
           To apply these settings to *all* ground station on a given body (such as "Earth"), use ["Earth", ""] is entry in this list.
-          For each link end included in this list, it will be checked if a signal received by and/or transmited (or reflected) by this
+          For each link end included in this list, it will be checked if a signal received by and/or transmitted (or reflected) by this
           link end is occulted by the specified body.
 
       - name: body_to_avoid # [py]
@@ -1114,7 +1114,7 @@ functions:
       - name: viability_settings # [py]
         type: List[ :class:`ObservationViabilitySettings` ], default = [ ] # [py]
         description: |
-          Settings for the creation of the viability criteria calculators, which conduct viabilty checks on the simulated observations.
+          Settings for the creation of the viability criteria calculators, which conduct viability checks on the simulated observations.
 
       - name: noise_function # [py]
         type: Callable[ [float], numpy.ndarray[numpy.float64[m, 1]] ], default = None # [py]
@@ -1156,7 +1156,7 @@ functions:
       - name: viability_settings # [py]
         type: List[ :class:`ObservationViabilitySettings` ], default = [ ] # [py]
         description: |
-          Settings for the creation of the viability criteria calculators, which conduct viabilty checks on the simulated observations.
+          Settings for the creation of the viability criteria calculators, which conduct viability checks on the simulated observations.
           The single settings list given here will be considered as potential viability settings for all simulation settings object created in the function call.
 
 
@@ -1171,7 +1171,7 @@ functions:
   - name: add_gaussian_noise_to_settings # [py]
     short_summary: "Function for adding gaussian noise function to existing observation simulation settings."
     extended_summary: |
-      Function for including simple time-independent and time-uncorrelated Gaussian noise funtion to the simulation settings of one or more observable(s).
+      Function for including simple time-independent and time-uncorrelated Gaussian noise function to the simulation settings of one or more observable(s).
       Out of the given :class:`~tudatpy.numerical_simulation.estimation_setup.observation.ObservationSimulationSettings` object(s) in the `observation_simulation_settings` parameter, the modification is only applied to the ones
       which match the :class:`~tudatpy.numerical_simulation.estimation_setup.observation.ObservableType` given by the `observable_type` parameter.
       Note that the :class:`~tudatpy.numerical_simulation.estimation_setup.observation.ObservationSimulationSettings` objects are modified in-place and thus the function does not return anything.
