--- a/docstrings/numerical_simulation/environment_setup/rotation_model.yaml
+++ b/docstrings/numerical_simulation/environment_setup/rotation_model.yaml
@@ -354,8 +354,8 @@ functions:
 
     examples: |
       In this example, we create :class:`~tudatpy.numerical_simulation.environment_setup.rotation_model.RotationModelSettings` for the martian moon Phobos,
-      effectively creating a frame ``"Phobos_Fixed"``, which (rotating in the ``"ECLIPJ2000"`` base frame) is fully synchronous w.r.t. Mars.
-      The rotation model of ``"Phobos_Fixed"`` is then assigned to the body settings of the body ``"Phobos"``:
+      We do so by assigning a synchronous rotation model to the rotation model settings of Phobos, using in this case ``"ECLIPJ2000"`` as the base frame,
+      and ``"Phobos_Fixed"`` as the target frame.
 
       .. code-block:: python # [py]
          # [py]
@@ -363,7 +363,6 @@ functions:
          original_frame = "ECLIPJ2000"
          target_frame = "Phobos_Fixed"
          central_body_name = "Mars"
-         target_frame_spice = "IAU_Earth"
          # create rotation model settings for target frame and assign to body settings of "Phobos" # [py]
          body_settings.get( "Phobos" ).rotation_model_settings = environment_setup.rotation_model.synchronous(
          original_frame, target_frame, central_body_name)
