--- a/docstrings/numerical_simulation/environment_setup/rotation_model.yaml
+++ b/docstrings/numerical_simulation/environment_setup/rotation_model.yaml
@@ -360,12 +360,12 @@ functions:
       .. code-block:: python # [py]
          # [py]
          # define parameters describing the synchronous rotation model
+         central_body_name = "Mars"
          original_frame = "ECLIPJ2000"
          target_frame = "Phobos_Fixed"
-         central_body_name = "Mars"
          # create rotation model settings for target frame and assign to body settings of "Phobos" # [py]
          body_settings.get( "Phobos" ).rotation_model_settings = environment_setup.rotation_model.synchronous(
-         original_frame, target_frame, central_body_name)
+         central_body_name, original_frame, target_frame)
 
       # [cpp] cpp code snippet unavailable
 
