Minor updates to module descriptions

--- a/docstrings/numerical_simulation/propagation.yaml
+++ b/docstrings/numerical_simulation/propagation.yaml
@@ -3,7 +3,8 @@ summary : "Functionalities and utilities of propagation objects."
 extended_summary: |
   This module provides functionalities for propagation settings
   objects. It also contains some utility functions that extract specific quantities from propagation settings and body
-  objects.
+  objects. Note that the classes in this module are rarely created manually, 
+  but are instead created by the functionality in the :ref:`\`\`propagation_setup\`\ module. 
 
 enums:
   - name: PropagationTerminationReason
