--- a/docstrings/numerical_simulation/environment.yaml
+++ b/docstrings/numerical_simulation/environment.yaml
@@ -3,9 +3,9 @@ summary : "Functionalities of environment objects."
 extended_summary: |
   This module provides functionalities for environment objects. Specifically, it contains
   classes and functions that perform computations related to environment models of natural and artificial bodies.
-  Much of the functionality in this module concerns classes stored inside :class:`~Body` objects, a list of which is in turn
-  stored in a  :class:`~SystemOfBodies` object. Note that the classes in this module are rarely created manually, 
-  but are instead created by the functionality in the :ref:`\`\`environment_setup\`\ module. 
+  Much of the functionality in this module concerns classes stored inside :class:`~tudatpy.numerical_simulation.environment.Body` objects, a list of which is in turn
+  stored in a :class:`~tudatpy.numerical_simulation.environment.SystemOfBodies` object. Note that the classes in this module are rarely created manually, 
+  but are instead created by the functionality in the :ref:`\`\`environment_setup\`\`` module. 
 
 
 enums:
