--- a/docstrings/numerical_simulation/propagation.yaml
+++ b/docstrings/numerical_simulation/propagation.yaml
@@ -4,7 +4,7 @@ extended_summary: |
   This module provides functionalities for propagation settings
   objects. It also contains some utility functions that extract specific quantities from propagation settings and body
   objects. Note that the classes in this module are rarely created manually, 
-  but are instead created by the functionality in the :ref:`\`\`propagation_setup\`\ module. 
+  but are instead created by the functionality in the :ref:`\`\`propagation_setup\`\``  module. 
 
 enums:
   - name: PropagationTerminationReason
