--- a/docstrings/numerical_simulation/propagation_setup/thrust.yaml
+++ b/docstrings/numerical_simulation/propagation_setup/thrust.yaml
@@ -497,6 +497,18 @@ functions:
         type: ThrustDirectionFromStateGuidanceSettings
         description: Thrust direction from state guidance settings object.
 
+    examples: | # [py]
+      In this example, we define a thrust orientation that is colinear with the velocity vector of the vehicle, with the thrust pointing towards the vehicle. # [py]
+
+      .. code-block:: python # [py]
+        # [py]
+        # Define thrust direction settings from state guidance # [py]
+        thrust.thrust_direction_from_state_guidance(
+          central_body, # [py]
+          is_colinear_with_velocity=True, # [py]
+          direction_is_opposite_to_vector=True # [py]
+        ) # [py]
+
 
   # From existing body orientation
   - name: thrustFromExistingBodyOrientation # [cpp]
@@ -511,6 +523,14 @@ functions:
     returns:
         type: ThrustDirectionSettings
         description: Thrust direction settings object.
+
+    examples: | # [py]
+      In this example, we define the thrust orientation from the orientation of the vehicle that was already defined before. # [py]
+
+      .. code-block:: python # [py]
+        # [py]
+        # Define thrust orientation settings based on the orientation of the body at hand # [py]
+        thrust.thrust_from_existing_body_orientation() # [py]
 
 
   # Custom thrust orientation (overload 1, cpp only)
@@ -558,6 +578,15 @@ functions:
         type: CustomThrustOrientationSettings
         description: Custom thrust orientation settings object.
 
+    examples: | # [py]
+      In this example, we define a thrust orientation in the inertial frame using a custom function, taking the time as input. # [py]
+      In this case, the custom thrust direction function is made so that the thrust vector oscillates in the y-z inertial plane. # [py]
+
+      .. code-block:: python # [py]
+        # [py]
+        # Define thrust orientation settings based on a function of time # [py]
+        thrust.custom_thrust_orientation(thrust_orientation_function) # [py]
+
 
   # Custom thrust direction
   - name: customThrustDirectionSettings # [cpp]
@@ -579,6 +608,20 @@ functions:
     returns:
         type: CustomThrustDirectionSettings
         description: Custom thrust direction settings object.
+
+    examples: | # [py]
+      In this example, we define a thrust direction in the inertial frame using a custom function, taking the time as input. # [py]
+      In this case, the custom thrust direction function is made so that the thrust vector oscillates in the y-z inertial plane. # [py]
+
+      .. code-block:: python # [py]
+        # [py]
+        # Define a function for the thrust orientation as a function of time # [py]
+        def thrust_direction_function(time): # [py]
+            thrust_direction = np.array([0, np.sin(time*np.pi/1000), -np.cos(time*np.pi/1000)]) # [py]
+            return thrust_direction/np.linalg.norm(thrust_direction) # [py]
+
+        # Define thrust direction settings based on a function of time # [py]
+        thrust.custom_thrust_direction(thrust_direction_function) # [py]
 
 
   ## Modified equinoctial elements costate-based thrust direction (overload 1)
@@ -682,6 +725,18 @@ functions:
         type: ConstantThrustMagnitudeSettings
         description: Constant thrust magnitude settings object.
 
+    examples: | # [py]
+      In this example, we define constant thrust magnitude of 1.5 kN, with a constant deviation from the body-fixed x-axis of 0.1 rad, and a specific impulse of 315 s. # [py]
+
+      .. code-block:: python # [py]
+        # [py]
+        # Define constant thrust magnitude settings of 1.5kN, an Isp of 315s, and a deviation from the body-fixed x-axis of 0.1 rad. # [py]
+        thrust.constant_thrust_magnitude( # [py]
+            thrust_magnitude=1.5e3, # [py]
+            specific_impulse=315, # [py]
+            body_fixed_thrust_direction=[np.cos(0.1), np.sin(0.1), 0] # [py]
+        ) # [py]
+
 
   # Custom thrust magnitude
   - name: fromFunctionThrustMagnitudeSettings # [cpp]
@@ -732,3 +787,28 @@ functions:
     returns:
         type: FromFunctionThrustMagnitudeSettings
         description: From function thrust magnitude settings object.
+
+    examples: | # [py]
+      In this example, we define a thrust magnitude based on a set of custom functions. # [py]
+      The magnitude itself starts from 500N, and linearly increases with time. # [py]
+      The specific impulse is constant, at 350s. Note that we use a `lambda` function to achieve this neatly. # [py]
+      Finally, the engine is setup to work for 50s, and be turned off afterwards. # [py]
+
+      .. code-block:: python # [py]
+        # [py]
+        # Define the thrust magnitude function: thrust increases linearly with time # [py]
+        def thrust_magnitude_function(time): # [py]
+            return 500 + time/2 # [py]
+
+        # Define a lambda specific impulse function: constant at 350s # [py]
+        specific_impulse_function = lambda time: 350 # [py]
+
+        # Define the "engine on" function: engine is off after 50s # [py]
+        def is_engine_on_function(time): # [py]
+            return time < 50 # [py]
+
+        # Define the custom thrust magnitude settings based on the pre-defined functions # [py]
+        thrust.custom_thrust_magnitude(thrust_magnitude_function, specific_impulse_function, is_engine_on_function) # [py]
+
+
+        
